--- a/chimes/lang/zh_tw.json
+++ b/chimes/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
   "block.chimes.bamboo_chimes": "竹風鈴",
-  "block.chimes.carved_bamboo_chimes": "刻制竹風鈴",
+  "block.chimes.carved_bamboo_chimes": "刻製竹風鈴",
   "block.chimes.iron_chimes": "鐵風鈴",
   "block.chimes.copper_chimes": "銅風鈴",
   "block.chimes.amethyst_chimes": "紫水晶風鈴",
