--- a/chisel/lang/zh_tw.json
+++ b/chisel/lang/zh_tw.json
@@ -14,9 +14,9 @@
   "chisel.mode.row.desc": "雕鑿 1x3 方塊的一字。",
   "chisel.mode.single": "單個",
   "chisel.mode.single.desc": "雕鑿單個方塊。",
-  "group.chisel.andesite": "安山巖",
+  "group.chisel.andesite": "安山岩",
   "group.chisel.antiblock": "純色方塊",
-  "group.chisel.basalt": "玄武巖",
+  "group.chisel.basalt": "玄武岩",
   "group.chisel.bricks": "磚塊",
   "group.chisel.carpet.black": "黑色地毯",
   "group.chisel.carpet.blue": "藍色地毯",
@@ -24,10 +24,10 @@
   "group.chisel.carpet.cyan": "青色地毯",
   "group.chisel.carpet.gray": "灰色地毯",
   "group.chisel.carpet.green": "綠色地毯",
-  "group.chisel.carpet.light_blue": "淡藍色地毯",
-  "group.chisel.carpet.light_gray": "淡灰色地毯",
-  "group.chisel.carpet.lime": "黃綠色地毯",
-  "group.chisel.carpet.magenta": "品紅色地毯",
+  "group.chisel.carpet.light_blue": "淺藍色地毯",
+  "group.chisel.carpet.light_gray": "淺灰色地毯",
+  "group.chisel.carpet.lime": "淺綠色地毯",
+  "group.chisel.carpet.magenta": "洋紅色地毯",
   "group.chisel.carpet.orange": "橙色地毯",
   "group.chisel.carpet.pink": "粉紅色地毯",
   "group.chisel.carpet.purple": "紫色地毯",
@@ -36,48 +36,48 @@
   "group.chisel.carpet.yellow": "黃色地毯",
   "group.chisel.charcoal": "木炭塊",
   "group.chisel.coal": "煤炭",
-  "group.chisel.cobblestone": "圓石",
-  "group.chisel.concrete.black": "黑色圓石",
-  "group.chisel.concrete.blue": "藍色圓石",
-  "group.chisel.concrete.brown": "棕色圓石",
-  "group.chisel.concrete.cyan": "青色圓石",
-  "group.chisel.concrete.gray": "灰色圓石",
-  "group.chisel.concrete.green": "綠色圓石",
-  "group.chisel.concrete.light_blue": "淡藍色圓石",
-  "group.chisel.concrete.light_gray": "淡灰色圓石",
-  "group.chisel.concrete.lime": "黃綠色圓石",
-  "group.chisel.concrete.magenta": "品紅色圓石",
-  "group.chisel.concrete.orange": "橙色圓石",
-  "group.chisel.concrete.pink": "粉紅色圓石",
-  "group.chisel.concrete.purple": "紫色圓石",
-  "group.chisel.concrete.red": "紅色圓石",
-  "group.chisel.concrete.white": "白色圓石",
-  "group.chisel.concrete.yellow": "黃色圓石",
+  "group.chisel.cobblestone": "鵝卵石",
+  "group.chisel.concrete.black": "黑色鵝卵石",
+  "group.chisel.concrete.blue": "藍色鵝卵石",
+  "group.chisel.concrete.brown": "棕色鵝卵石",
+  "group.chisel.concrete.cyan": "青色鵝卵石",
+  "group.chisel.concrete.gray": "灰色鵝卵石",
+  "group.chisel.concrete.green": "綠色鵝卵石",
+  "group.chisel.concrete.light_blue": "淺藍色鵝卵石",
+  "group.chisel.concrete.light_gray": "淺灰色鵝卵石",
+  "group.chisel.concrete.lime": "淺綠色鵝卵石",
+  "group.chisel.concrete.magenta": "洋紅色鵝卵石",
+  "group.chisel.concrete.orange": "橙色鵝卵石",
+  "group.chisel.concrete.pink": "粉紅色鵝卵石",
+  "group.chisel.concrete.purple": "紫色鵝卵石",
+  "group.chisel.concrete.red": "紅色鵝卵石",
+  "group.chisel.concrete.white": "白色鵝卵石",
+  "group.chisel.concrete.yellow": "黃色鵝卵石",
   "group.chisel.diorite": "齊紋磚塊",
   "group.chisel.emerald": "綠寶石塊",
-  "group.chisel.end_stone": "末地石",
+  "group.chisel.end_stone": "終界石",
   "group.chisel.factory": "工廠方塊",
   "group.chisel.futura": "科幻方塊",
-  "group.chisel.glowstone": "熒石",
-  "group.chisel.granite": "花崗巖",
+  "group.chisel.glowstone": "螢光石",
+  "group.chisel.granite": "花崗岩",
   "group.chisel.laboratory": "實驗室方塊",
-  "group.chisel.limestone": "石灰巖",
+  "group.chisel.limestone": "石灰岩",
   "group.chisel.marble": "大理石",
   "group.chisel.metals.aluminum": "鋁塊",
   "group.chisel.metals.bronze": "青銅塊",
-  "group.chisel.mossy_cobblestone": "苔石",
-  "group.chisel.planks.acacia": "金合歡木板",
-  "group.chisel.planks.birch": "白樺木板",
-  "group.chisel.planks.dark_oak": "深色橡木木板",
-  "group.chisel.planks.jungle": "叢林木板",
-  "group.chisel.planks.oak": "橡木木板",
-  "group.chisel.planks.spruce": "雲杉木板",
-  "group.chisel.prismarine": "海晶石",
+  "group.chisel.mossy_cobblestone": "青苔鵝卵石",
+  "group.chisel.planks.acacia": "相思木材",
+  "group.chisel.planks.birch": "樺木材",
+  "group.chisel.planks.dark_oak": "黑橡木材",
+  "group.chisel.planks.jungle": "叢林木材",
+  "group.chisel.planks.oak": "橡木木材",
+  "group.chisel.planks.spruce": "杉木材",
+  "group.chisel.prismarine": "海磷石",
   "group.chisel.purpur": "紫珀",
   "group.chisel.quartz": "石英",
-  "group.chisel.red_sandstone": "紅砂巖",
+  "group.chisel.red_sandstone": "紅砂岩",
   "group.chisel.redstone": "紅石",
-  "group.chisel.sandstone": "砂巖",
+  "group.chisel.sandstone": "砂岩",
   "group.chisel.stone_bricks": "石磚",
   "group.chisel.terracotta": "陶瓦",
   "group.chisel.tyrian": "未來風格金屬塊",
@@ -87,10 +87,10 @@
   "group.chisel.wool.cyan": "青色羊毛",
   "group.chisel.wool.gray": "灰色羊毛",
   "group.chisel.wool.green": "綠色羊毛",
-  "group.chisel.wool.light_blue": "淡藍色羊毛",
-  "group.chisel.wool.light_gray": "淡灰色羊毛",
-  "group.chisel.wool.lime": "黃綠色羊毛",
-  "group.chisel.wool.magenta": "品紅色羊毛",
+  "group.chisel.wool.light_blue": "淺藍色羊毛",
+  "group.chisel.wool.light_gray": "淺灰色羊毛",
+  "group.chisel.wool.lime": "淺綠色羊毛",
+  "group.chisel.wool.magenta": "洋紅色羊毛",
   "group.chisel.wool.orange": "橙色羊毛",
   "group.chisel.wool.pink": "粉紅色羊毛",
   "group.chisel.wool.purple": "紫色羊毛",
@@ -102,12 +102,12 @@
   "hitech.chisel.preview.panel": "平面",
   "hitech.chisel.preview.plus": "十字",
   "hitech.chisel.preview.single": "單個",
-  "item.chisel.diamond_chisel": "鉆石鑿子",
+  "item.chisel.diamond_chisel": "鑽石鑿子",
   "item.chisel.hitech_chisel": "i 鑿子",
   "item.chisel.iron_chisel": "鐵鑿子",
-  "item.chisel.offset_tool": "末影紋理平移手杖",
+  "item.chisel.offset_tool": "終界紋理平移手杖",
   "itemGroup.chisel": "鑿子",
-  "jei.chisel.desc.chisel.diamond": "鉆石鑿子是中級的鑿子，耐久值高，一次可以雕鑿 3x3(9) 個方塊！",
+  "jei.chisel.desc.chisel.diamond": "鑽石鑿子是中級的鑿子，耐久值高，一次可以雕鑿 3x3(9) 個方塊！",
   "jei.chisel.desc.chisel.generic": "鑿子可被用來創造各種方塊的不同樣式。你可以右擊鑿子打開GUI雕鑿，也可以直接點擊方塊進行雕鑿。如果GUI中已經選定了方塊，點擊方塊時將僅把相應方塊雕鑿成指定外觀。",
   "jei.chisel.desc.chisel.hitech": "i 鑿子是鑿子科技的最新產品！你無需移動物品，僅需選定物品欄中的格子，選擇目標樣式點擊左側的“雕鑿”按鈕即可。按住Shift鍵可一次雕鑿所有相同方塊。方便的預覽窗口可用於查看方塊在世界中的外觀。最後，i 鑿子還能一次雕鑿9000+個世界中的方塊！選擇“鄰近”和“鄰近 2D”模式後你可以一次雕鑿世界中的一片相似方塊。",
   "jei.chisel.desc.chisel.iron": "鐵鑿子是最基礎的鑿子，耐久值低，且一次只能雕鑿世界中的一個方塊。",
@@ -125,7 +125,7 @@
   "variant.chisel.blue": "藍色",
   "variant.chisel.blueplating": "藍色電鍍板",
   "variant.chisel.bolted": "螺栓鑲板",
-  "variant.chisel.braced_planks": "支撐木板",
+  "variant.chisel.braced_planks": "支撐木材",
   "variant.chisel.braid": "穗帶",
   "variant.chisel.brown": "棕色",
   "variant.chisel.caution": "警示",
@@ -147,9 +147,9 @@
   "variant.chisel.cracked": "碎裂紋",
   "variant.chisel.cracked_bricks": "裂紋磚塊",
   "variant.chisel.crate": "貨箱",
-  "variant.chisel.crude_horizontal_planks": "粗制水平刻紋木板",
+  "variant.chisel.crude_horizontal_planks": "粗制水平刻紋木材",
   "variant.chisel.crude_paneling": "粗制鑲板",
-  "variant.chisel.crude_vertical_planks": "粗制垂直層狀紋木板",
+  "variant.chisel.crude_vertical_planks": "粗制垂直層狀紋木材",
   "variant.chisel.cuts": "切口",
   "variant.chisel.cyan": "青色",
   "variant.chisel.dent": "凹面",
@@ -162,8 +162,8 @@
   "variant.chisel.emeraldcircle": "環形",
   "variant.chisel.emeraldprismatic": "棱狀",
   "variant.chisel.encased_bricks": "嵌套磚塊",
-  "variant.chisel.encased_large_planks": "嵌套大塊木板",
-  "variant.chisel.encased_planks": "嵌套木板",
+  "variant.chisel.encased_large_planks": "嵌套大塊木材",
+  "variant.chisel.encased_planks": "嵌套木材",
   "variant.chisel.encased_smooth": "平滑嵌套",
   "variant.chisel.extra.bevel_creeper": "苦力怕雕紋凹面",
   "variant.chisel.extra.bevel_skeleton": "骷髏雕紋凹面",
@@ -186,8 +186,8 @@
   "variant.chisel.frameblue": "藍框電路板",
   "variant.chisel.french_1": "法式 1",
   "variant.chisel.french_2": "法式 2",
-  "variant.chisel.fuzzscreen": "毛面墻板",
-  "variant.chisel.goldborder": "精致金框",
+  "variant.chisel.fuzzscreen": "毛面牆板",
+  "variant.chisel.goldborder": "精緻金框",
   "variant.chisel.goldplate": "鍍金電路板",
   "variant.chisel.goldplating": "金框紫色金屬板",
   "variant.chisel.gray": "灰色",
@@ -198,20 +198,20 @@
   "variant.chisel.iceiceice": "凍住！不許走！",
   "variant.chisel.infocon": "控制台",
   "variant.chisel.jellybean": "糖豆花紋",
-  "variant.chisel.large_planks": "大塊木板",
+  "variant.chisel.large_planks": "大塊木材",
   "variant.chisel.largesteel": "大塊鋼磚",
   "variant.chisel.largetile": "大塊瓷磚",
   "variant.chisel.layers": "層狀紋",
   "variant.chisel.legacy": "傳統",
-  "variant.chisel.light_blue": "淡藍色",
-  "variant.chisel.light_gray": "淡灰色",
-  "variant.chisel.lime": "黃綠色",
+  "variant.chisel.light_blue": "淺藍色",
+  "variant.chisel.light_gray": "淺灰色",
+  "variant.chisel.lime": "淺綠色",
   "variant.chisel.llama": "美洲駝",
   "variant.chisel.log_cabin": "原木小屋",
   "variant.chisel.machine": "機器",
   "variant.chisel.machine.desc.1": "一二五之地",
   "variant.chisel.machine.desc.2": "的古老遺物",
-  "variant.chisel.magenta": "品紅色",
+  "variant.chisel.magenta": "洋紅色",
   "variant.chisel.masonryemerald": "磚石",
   "variant.chisel.metalbox": "金屬盒",
   "variant.chisel.mosaic": "馬賽克",
@@ -262,7 +262,7 @@
   "variant.chisel.tyrian": "未來風格金屬塊",
   "variant.chisel.uber_wavy": "震驚波紋",
   "variant.chisel.vent": "通風口",
-  "variant.chisel.vertical_planks": "豎紋木板",
+  "variant.chisel.vertical_planks": "豎紋木材",
   "variant.chisel.wallpanel": "白色平面",
   "variant.chisel.wallvents": "通風口",
   "variant.chisel.wavy": "彩虹波紋",
