--- a/chisel_chipped_integration/lang/zh_tw.json
+++ b/chisel_chipped_integration/lang/zh_tw.json
@@ -36,18 +36,18 @@
   "block.chisel_chipped_integration.futura_me_controller": "科幻方塊",
   "block.chisel_chipped_integration.futura_purple_me_controller": "科幻方塊",
   "block.chisel_chipped_integration.futura_rainbowliciously_wavy": "科幻方塊",
-  "block.chisel_chipped_integration.gem_diamond_bismuth": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_cells": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_crushed": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_embossed": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_gem": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_gold_encrusted": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_ornate_tiles": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_purple_space": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_simple": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_space": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_tiles": "鉆石塊",
-  "block.chisel_chipped_integration.gem_diamond_zelda": "鉆石塊",
+  "block.chisel_chipped_integration.gem_diamond_bismuth": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_cells": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_crushed": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_embossed": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_gem": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_gold_encrusted": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_ornate_tiles": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_purple_space": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_simple": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_space": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_tiles": "鑽石塊",
+  "block.chisel_chipped_integration.gem_diamond_zelda": "鑽石塊",
   "block.chisel_chipped_integration.gem_emerald_bismuth": "綠寶石塊",
   "block.chisel_chipped_integration.gem_emerald_cell": "綠寶石塊",
   "block.chisel_chipped_integration.gem_emerald_circular": "綠寶石塊",
@@ -199,12 +199,12 @@
   "gui.chisel_chipped_integration.drill_gui.tooltip_top_left_corner": "左上角",
   "gui.chisel_chipped_integration.drill_gui.tooltip_top_right_corner": "右上角",
   "item_group.chisel_chipped_integration.chisel": "鑿子",
-  "item.chisel_chipped_integration.drill": "手鉆",
+  "item.chisel_chipped_integration.drill": "手鑽",
   "itemGroup.tabchisel": "鑿子",
   "block.chisel_chipped_integration.carpet_legacy_white": "傳統白色地毯",
   "block.chisel_chipped_integration.carpet_llama_white": "美洲駝白色地毯",
-  "block.chisel_chipped_integration.carpet_legacy_light_gray": "傳統淡灰色地毯",
-  "block.chisel_chipped_integration.carpet_llama_light_gray": "美洲駝淡灰色地毯",
+  "block.chisel_chipped_integration.carpet_legacy_light_gray": "傳統淺灰色地毯",
+  "block.chisel_chipped_integration.carpet_llama_light_gray": "美洲駝淺灰色地毯",
   "block.chisel_chipped_integration.carpet_legacy_gray": "傳統灰色地毯",
   "block.chisel_chipped_integration.carpet_llama_gray": "美洲駝灰色地毯",
   "block.chisel_chipped_integration.carpet_legacy_black": "傳統黑色地毯",
@@ -217,26 +217,26 @@
   "block.chisel_chipped_integration.carpet_llama_orange": "美洲駝橙色地毯",
   "block.chisel_chipped_integration.carpet_legacy_yellow": "傳統黃色地毯",
   "block.chisel_chipped_integration.carpet_llama_yellow": "美洲駝黃色地毯",
-  "block.chisel_chipped_integration.carpet_legacy_lime": "傳統黃綠色地毯",
-  "block.chisel_chipped_integration.carpet_llama_lime": "美洲駝黃綠色地毯",
+  "block.chisel_chipped_integration.carpet_legacy_lime": "傳統淺綠色地毯",
+  "block.chisel_chipped_integration.carpet_llama_lime": "美洲駝淺綠色地毯",
   "block.chisel_chipped_integration.carpet_legacy_green": "傳統綠色地毯",
   "block.chisel_chipped_integration.carpet_llama_green": "美洲駝綠色地毯",
   "block.chisel_chipped_integration.carpet_legacy_cyan": "傳統青色地毯",
   "block.chisel_chipped_integration.carpet_llama_cyan": "美洲駝青色地毯",
-  "block.chisel_chipped_integration.carpet_legacy_light_blue": "傳統淡藍色地毯",
-  "block.chisel_chipped_integration.carpet_llama_light_blue": "美洲駝淡藍色地毯",
+  "block.chisel_chipped_integration.carpet_legacy_light_blue": "傳統淺藍色地毯",
+  "block.chisel_chipped_integration.carpet_llama_light_blue": "美洲駝淺藍色地毯",
   "block.chisel_chipped_integration.carpet_legacy_blue": "傳統藍色地毯",
   "block.chisel_chipped_integration.carpet_llama_blue": "美洲駝藍色地毯",
   "block.chisel_chipped_integration.carpet_legacy_purple": "傳統紫色地毯",
   "block.chisel_chipped_integration.carpet_llama_purple": "美洲駝紫色地毯",
-  "block.chisel_chipped_integration.carpet_legacy_magenta": "傳統品紅色地毯",
-  "block.chisel_chipped_integration.carpet_llama_magenta": "美洲駝品紅色地毯",
+  "block.chisel_chipped_integration.carpet_legacy_magenta": "傳統洋紅色地毯",
+  "block.chisel_chipped_integration.carpet_llama_magenta": "美洲駝洋紅色地毯",
   "block.chisel_chipped_integration.carpet_legacy_pink": "傳統粉紅色地毯",
   "block.chisel_chipped_integration.carpet_llama_pink": "美洲駝粉紅色地毯",
   "block.chisel_chipped_integration.wool_legacy_white": "傳統白色羊毛",
   "block.chisel_chipped_integration.wool_llama_white": "美洲駝白色羊毛",
-  "block.chisel_chipped_integration.wool_legacy_light_gray": "傳統淡灰色羊毛",
-  "block.chisel_chipped_integration.wool_llama_light_gray": "美洲駝淡灰色羊毛",
+  "block.chisel_chipped_integration.wool_legacy_light_gray": "傳統淺灰色羊毛",
+  "block.chisel_chipped_integration.wool_llama_light_gray": "美洲駝淺灰色羊毛",
   "block.chisel_chipped_integration.wool_legacy_gray": "傳統灰色羊毛",
   "block.chisel_chipped_integration.wool_llama_gray": "美洲駝灰色羊毛",
   "block.chisel_chipped_integration.wool_legacy_black": "傳統黑色羊毛",
@@ -249,20 +249,20 @@
   "block.chisel_chipped_integration.wool_llama_orange": "美洲駝橙色羊毛",
   "block.chisel_chipped_integration.wool_legacy_yellow": "傳統黃色羊毛",
   "block.chisel_chipped_integration.wool_llama_yellow": "美洲駝黃色羊毛",
-  "block.chisel_chipped_integration.wool_legacy_lime": "傳統黃綠色羊毛",
-  "block.chisel_chipped_integration.wool_llama_lime": "美洲駝黃綠色羊毛",
+  "block.chisel_chipped_integration.wool_legacy_lime": "傳統淺綠色羊毛",
+  "block.chisel_chipped_integration.wool_llama_lime": "美洲駝淺綠色羊毛",
   "block.chisel_chipped_integration.wool_legacy_green": "傳統綠色羊毛",
   "block.chisel_chipped_integration.wool_llama_green": "美洲駝綠色羊毛",
   "block.chisel_chipped_integration.wool_legacy_cyan": "傳統青色羊毛",
   "block.chisel_chipped_integration.wool_llama_cyan": "美洲駝青色羊毛",
-  "block.chisel_chipped_integration.wool_legacy_light_blue": "傳統淡藍色羊毛",
-  "block.chisel_chipped_integration.wool_llama_light_blue": "美洲駝淡藍色羊毛",
+  "block.chisel_chipped_integration.wool_legacy_light_blue": "傳統淺藍色羊毛",
+  "block.chisel_chipped_integration.wool_llama_light_blue": "美洲駝淺藍色羊毛",
   "block.chisel_chipped_integration.wool_legacy_blue": "傳統藍色羊毛",
   "block.chisel_chipped_integration.wool_llama_blue": "美洲駝藍色羊毛",
   "block.chisel_chipped_integration.wool_legacy_purple": "傳統紫色羊毛",
   "block.chisel_chipped_integration.wool_llama_purple": "美洲駝紫色羊毛",
-  "block.chisel_chipped_integration.wool_legacy_magenta": "傳統品紅色羊毛",
-  "block.chisel_chipped_integration.wool_llama_magenta": "美洲駝品紅色羊毛",
+  "block.chisel_chipped_integration.wool_legacy_magenta": "傳統洋紅色羊毛",
+  "block.chisel_chipped_integration.wool_llama_magenta": "美洲駝洋紅色羊毛",
   "block.chisel_chipped_integration.wool_legacy_pink": "傳統粉紅色羊毛",
   "block.chisel_chipped_integration.wool_llama_pink": "美洲駝粉紅色羊毛",
   "block.chisel_chipped_integration.metal_aluminum_bolted": "鋁塊",
