--- a/chiselsandbits/lang/zh_tw.json
+++ b/chiselsandbits/lang/zh_tw.json
@@ -12,8 +12,8 @@
   "item.chiselsandbits.chisel_stone": "石鑿",
   "item.chiselsandbits.chisel_iron": "鐵鑿",
   "item.chiselsandbits.chisel_gold": "金鑿",
-  "item.chiselsandbits.chisel_diamond": "鉆石鑿",
-  "item.chiselsandbits.bitsaw_diamond": "鉆石碎屑鋸",
+  "item.chiselsandbits.chisel_diamond": "鑽石鑿",
+  "item.chiselsandbits.bitsaw_diamond": "鑽石碎屑鋸",
   "item.chiselsandbits.magnifying_glass": "放大鏡",
   "mod.chiselsandbits.chiselmode.single": "丁狀",
   "mod.chiselsandbits.chiselmode.line": "條狀",
@@ -35,12 +35,12 @@
   "mod.chiselsandbits.result.nothing_to_undo": "未找到可撤銷的內容",
   "mod.chiselsandbits.result.nothing_to_redo": "未找到可重做的內容",
   "mod.chiselsandbits.result.require_bag": "你在使用這個物品前需要在物品欄或背包里留空一個槽！",
-  "mod.chiselsandbits.result.void_excess": "你的物品欄已滿，任何多余的碎屑都不會產出！",
+  "mod.chiselsandbits.result.void_excess": "你的物品欄已滿，任何多餘的碎屑都不會產出！",
   "mod.chiselsandbits.other.rotate.ccw": "逆時針旋轉所持方塊",
   "mod.chiselsandbits.other.rotate.cw": "順時針旋轉所持方塊",
   "mod.chiselsandbits.other.mode": "打開徑向菜單",
   "mod.chiselsandbits.other.undo": "撤銷",
-  "mod.chiselsandbits.other.redo": "恢覆",
+  "mod.chiselsandbits.other.redo": "恢復",
   "mod.chiselsandbits.other.pickbit": "獲取碎屑",
   "mod.chiselsandbits.other.offgrid": "放置網格",
   "mod.chiselsandbits.other.add_to_clipboard": "保存方塊至剪貼板",
@@ -83,13 +83,13 @@
   "mod.chiselsandbits.pretty.facing-south": "南",
   "chiselsandbits.color.white": "白色",
   "chiselsandbits.color.orange": "橙色",
-  "chiselsandbits.color.magenta": "品紅色",
-  "chiselsandbits.color.light_blue": "淡藍色",
+  "chiselsandbits.color.magenta": "洋紅色",
+  "chiselsandbits.color.light_blue": "淺藍色",
   "chiselsandbits.color.yellow": "黃色",
-  "chiselsandbits.color.lime": "黃綠色",
+  "chiselsandbits.color.lime": "淺綠色",
   "chiselsandbits.color.pink": "粉紅色",
   "chiselsandbits.color.gray": "灰色",
-  "chiselsandbits.color.light_gray": "淡灰色",
+  "chiselsandbits.color.light_gray": "淺灰色",
   "chiselsandbits.color.cyan": "青色",
   "chiselsandbits.color.purple": "紫色",
   "chiselsandbits.color.blue": "藍色",
