--- a/chococraft/lang/zh_tw.json
+++ b/chococraft/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
   "block.chococraft.gysahl_green": "基薩爾野菜",
-  "block.chococraft.straw": "草席",
+  "block.chococraft.straw": "草蓆",
   "chococraft.entity_chocobo.chocobo_followcmd": "跟隨",
   "chococraft.entity_chocobo.chocobo_staycmd": "停駐",
   "chococraft.entity_chocobo.chocobo_wandercmd": "遊蕩",
@@ -17,9 +17,9 @@
   "gui.chocobook.page2": "你現在可能在考慮如何馴服一只陸行鳥。只需要找到隨處可見的基薩爾野菜來喂它們，小菜一碟。想讓它更喜歡你？就喂它更多的基薩爾野菜吧，準沒錯！",
   "gui.chocobook.page3": "要怎麽騎上陸行鳥呢？有時陸行鳥會掉落一種獨特的羽毛，將其和普通的鞍合成就能得到陸行鳥鞍，手持右擊陸行鳥使其穿戴。也許你能做一個更好的鞍，帶存儲空間的那種。",
   "gui.chocobook.page4": "擁有一只普通陸行鳥已是美事，但不是最美的事。對陸行鳥使用陸行鳥百科就能通過消耗你的經驗來為它們解鎖全新的能力，包括飛翔、滑翔、疾跑和潛水。",
-  "gui.chocobook.page5": "不錯，但怎麽使用這些能力呢？疾跑獲得足夠動量後起跳就能飛翔，滑翔使陸行鳥降落得更緩慢，按下“疾跑”鍵來疾跑（第四面墻碎裂的聲音），跳入水中以潛水。",
+  "gui.chocobook.page5": "不錯，但怎麽使用這些能力呢？疾跑獲得足夠動量後起跳就能飛翔，滑翔使陸行鳥降落得更緩慢，按下“疾跑”鍵來疾跑（第四面牆碎裂的聲音），跳入水中以潛水。",
   "gui.chocobook.page6": "我已經有了一只陸行鳥，但我還要更多！你需要的是一只雌陸行鳥和一只雄陸行鳥，喂它們種植基薩爾野菜所得的稀有產品⸺“漂亮的基薩爾野菜”來使它們繁殖。把蛋放在陸行鳥巢中，給予其足夠的時間與空間就會孵化。",
-  "gui.chocobook.page7": "我的陸行鳥的後代性狀更差了，咋辦啊！不必擔心，會有幾率新生的陸行鳥在某方面弱於其父輩，但大多數時候新的陸行鳥會比上一代更快，更健康，更精力充沛。一直嘗試就能成功！",
+  "gui.chocobook.page7": "我的陸行鳥的後代性狀更差了，咋辦啊！不必擔心，會有機率新生的陸行鳥在某方面弱於其父輩，但大多數時候新的陸行鳥會比上一代更快，更健康，更精力充沛。一直嘗試就能成功！",
   "gui.chocobook.title": "陸行鳥百科·第%s頁",
   "info.chococraft.book.chicobo.entry.name": "陸行雛",
   "info.chococraft.book.chicobo.text1": "陸行雛是$(l:chococraft:info/chocobo)陸行鳥$()的幼年狀態，可由繁殖陸行鳥而得。$(br)馴服後給它喂$(l:chococraft:info/gysahl_cake)基薩爾蛋糕$()就能讓其瞬間長成成年狀態。",
@@ -28,12 +28,12 @@
   "info.chococraft.book.chocobo.blue.description": "可由兩只黃色陸行鳥繁殖而得。",
   "info.chococraft.book.chocobo.blue.description2": "水上速度是普通陸行鳥的兩倍，還會給予你水下呼吸。",
   "info.chococraft.book.chocobo.entry.name": "陸行鳥",
-  "info.chococraft.book.chocobo.flame.description": "它們只能在下界找到。",
+  "info.chococraft.book.chocobo.flame.description": "它們只能在地獄找到。",
   "info.chococraft.book.chocobo.flame.description2": "和金色陸行鳥能力相同（不過速度稍慢）。",
   "info.chococraft.book.chocobo.gold.description": "可由白色和黑色陸行鳥繁殖而得。用金基薩爾野菜給兩只金色陸行鳥繁殖所產生的後代必然是金色的。",
   "info.chococraft.book.chocobo.gold.description2": "能飛翔、攀爬、遊泳，還免疫摔落傷害。它們的速度是最快的，能和粉紅色還有紅色陸行鳥打成平手。",
   "info.chococraft.book.chocobo.green.description": "可由兩只黃色陸行鳥繁殖而得。",
-  "info.chococraft.book.chocobo.green.description2": "能直接走上兩格高的高墻。",
+  "info.chococraft.book.chocobo.green.description2": "能直接走上兩格高的高牆。",
   "info.chococraft.book.chocobo.pink.description": "它們只能通過給金色陸行鳥喂粉紅色基薩爾野菜獲得。",
   "info.chococraft.book.chocobo.pink.description2": "和金色陸行鳥能力相同。",
   "info.chococraft.book.chocobo.purple.description": "（目前無法獲得）。",
@@ -41,7 +41,7 @@
   "info.chococraft.book.chocobo.red.description": "它們只能通過給金色陸行鳥喂紅色基薩爾野菜獲得。",
   "info.chococraft.book.chocobo.red.description2": "和金色陸行鳥能力相同。",
   "info.chococraft.book.chocobo.text": "陸行鳥是被動生物。但它們會被玩家嚇到，所以在它們周圍要小心謹慎。",
-  "info.chococraft.book.chocobo.text2": "黃色陸行鳥生成於平原群系和山脈群系。烈火陸行鳥生成於下界。可用$(l:chococraft:info/loverly_gysahl)漂亮的基薩爾野菜$()（20%%概率出現新顏色和新能力）或$(l:chococraft:info/gold_gysahl)金基薩爾野菜$()（50%%概率）來繁殖陸行鳥，以獲得更多種顏色。若要育得金色陸行鳥，$(l:chococraft:info/gold_gysahl)金基薩爾野菜$()則是必備物品。",
+  "info.chococraft.book.chocobo.text2": "黃色陸行鳥生成於平原群系和山脈群系。烈火陸行鳥生成於地獄。可用$(l:chococraft:info/loverly_gysahl)漂亮的基薩爾野菜$()（20%%概率出現新顏色和新能力）或$(l:chococraft:info/gold_gysahl)金基薩爾野菜$()（50%%概率）來繁殖陸行鳥，以獲得更多種顏色。若要育得金色陸行鳥，$(l:chococraft:info/gold_gysahl)金基薩爾野菜$()則是必備物品。",
   "info.chococraft.book.chocobo.text3": "一群生成於山脈旁平原上的陸行鳥。",
   "info.chococraft.book.chocobo.text4": "可通過給陸行鳥喂基薩爾野菜來繁殖。所有種類的陸行鳥間均無生殖隔離，但僅一對異性可以繁殖。繁殖陸行鳥則需要金基薩爾野菜或漂亮的基薩爾野菜。",
   "info.chococraft.book.chocobo.white.description": "可由綠色和藍色陸行鳥繁殖而得。",
@@ -67,8 +67,8 @@
   "info.chococraft.book.legacy.name": "舊版",
   "info.chococraft.book.loverly_gysahl.entry.name": "漂亮的基薩爾野菜",
   "info.chococraft.book.loverly_gysahl.text1": "$(bold)漂亮的基薩爾野菜$()是普通$(l:chococraft:info/gysahl_green)基薩爾野菜$()的一種變種，常用於繁殖$(l:chococraft:info/chocobo)陸行鳥$()。$(br)$(bold)漂亮的基薩爾野菜$()可在收獲$(l:chococraft:info/gysahl_green)基薩爾野菜$()時獲得，概率為15%%。",
-  "info.chococraft.book.pickled_gysahl.entry.name": "腌制基薩爾野菜",
-  "info.chococraft.book.pickled_gysahl.text1": "腌制基薩爾野菜是一種以$(l:chococraft:info/gysahl_green)基薩爾野菜$()制作的食物。$(br)未經烹飪的腌制基薩爾野菜不可食用，而烤制後就可食用了。",
+  "info.chococraft.book.pickled_gysahl.entry.name": "醃製基薩爾野菜",
+  "info.chococraft.book.pickled_gysahl.text1": "醃製基薩爾野菜是一種以$(l:chococraft:info/gysahl_green)基薩爾野菜$()製作的食物。$(br)未經烹飪的醃製基薩爾野菜不可食用，而烤製後就可食用了。",
   "info.chococraft.book.pink_gysahl.entry.name": "粉紅色基薩爾野菜",
   "info.chococraft.book.pink_gysahl.text1": "$(bold)粉紅色基薩爾野菜$()是普通$(l:chococraft:info/gysahl_green)基薩爾野菜$()的一種變種，常用於將$(l:chococraft:info/chocobo#gold)金色陸行鳥$()轉變為$(l:chococraft:info/chocobo#pink)粉紅色陸行鳥$()。",
   "info.chococraft.book.raw_drumstick.entry.name": "陸行鳥腿",
@@ -78,12 +78,12 @@
   "info.chococraft.book.saddle.entry.name": "陸行鳥鞍",
   "info.chococraft.book.saddle.text1": "陸行鳥鞍使你能操控已馴服的$(l:chococraft:info/chocobo)陸行鳥$()。$(br)陸行鳥鞍分幾種不同種類，最基礎的只能讓你操控陸行鳥，而其他幾種則還會使$(l:chococraft:info/chocobo)陸行鳥$()擁有儲物能力。",
   "info.chococraft.book.saddle.text2": "$(bold)附袋陸行鳥鞍$()有18個槽位。$(br)$(bold)附包陸行鳥鞍$()則有45個槽位。",
-  "info.chococraft.book.straw.entry.name": "草席",
-  "info.chococraft.book.straw.text1": "草席可放置在你的$(l:chococraft:info/chocobo)陸行鳥$()舍內，這樣$(l:chococraft:info/chocobo)陸行鳥$()在處於舍內時便會自然恢覆血量。",
+  "info.chococraft.book.straw.entry.name": "草蓆",
+  "info.chococraft.book.straw.text1": "草蓆可放置在你的$(l:chococraft:info/chocobo)陸行鳥$()舍內，這樣$(l:chococraft:info/chocobo)陸行鳥$()在處於舍內時便會自然恢覆血量。",
   "info.chococraft.book.subtitle": "有關陸行鳥的全面介紹",
   "info.chocopedia.book.name": "陸行鳥百科",
-  "item.chococraft.black_chocobo_spawn_egg": "黑色陸行鳥刷怪蛋",
-  "item.chococraft.blue_chocobo_spawn_egg": "藍色陸行鳥刷怪蛋",
+  "item.chococraft.black_chocobo_spawn_egg": "黑色陸行鳥 生怪蛋",
+  "item.chococraft.blue_chocobo_spawn_egg": "藍色陸行鳥 生怪蛋",
   "item.chococraft.choco_disguise_boots": "陸行鳥羽靴子",
   "item.chococraft.choco_disguise_chestplate": "陸行鳥羽外套",
   "item.chococraft.choco_disguise_helmet": "陸行鳥羽頭盔",
@@ -96,22 +96,22 @@
   "item.chococraft.chocobo_saddle_pack": "附包陸行鳥鞍",
   "item.chococraft.chocobo_whistle": "陸行鳥口哨",
   "item.chococraft.chocopedia": "陸行鳥百科",
-  "item.chococraft.flame_chocobo_spawn_egg": "烈火陸行鳥刷怪蛋",
-  "item.chococraft.gold_chocobo_spawn_egg": "金色陸行鳥刷怪蛋",
+  "item.chococraft.flame_chocobo_spawn_egg": "烈火陸行鳥 生怪蛋",
+  "item.chococraft.gold_chocobo_spawn_egg": "金色陸行鳥 生怪蛋",
   "item.chococraft.gold_gysahl": "金基薩爾野菜",
-  "item.chococraft.green_chocobo_spawn_egg": "綠色陸行鳥刷怪蛋",
+  "item.chococraft.green_chocobo_spawn_egg": "綠色陸行鳥 生怪蛋",
   "item.chococraft.gysahl_cake": "基薩爾蛋糕",
   "item.chococraft.gysahl_green": "基薩爾野菜",
   "item.chococraft.gysahl_green_seeds": "基薩爾野菜種子",
   "item.chococraft.loverly_gysahl_green": "漂亮的基薩爾野菜",
-  "item.chococraft.pickled_gysahl_cooked": "烤腌制基薩爾野菜",
-  "item.chococraft.pickled_gysahl_raw": "生腌制基薩爾野菜",
-  "item.chococraft.pink_chocobo_spawn_egg": "粉紅色陸行鳥刷怪蛋",
+  "item.chococraft.pickled_gysahl_cooked": "烤醃製基薩爾野菜",
+  "item.chococraft.pickled_gysahl_raw": "生醃製基薩爾野菜",
+  "item.chococraft.pink_chocobo_spawn_egg": "粉紅色陸行鳥 生怪蛋",
   "item.chococraft.pink_gysahl": "粉紅色基薩爾野菜",
-  "item.chococraft.purple_chocobo_spawn_egg": "紫色陸行鳥刷怪蛋",
-  "item.chococraft.red_chocobo_spawn_egg": "紅色陸行鳥刷怪蛋",
+  "item.chococraft.purple_chocobo_spawn_egg": "紫色陸行鳥 生怪蛋",
+  "item.chococraft.red_chocobo_spawn_egg": "紅色陸行鳥 生怪蛋",
   "item.chococraft.red_gysahl": "紅色基薩爾野菜",
-  "item.chococraft.white_chocobo_spawn_egg": "白色陸行鳥刷怪蛋",
-  "item.chococraft.yellow_chocobo_spawn_egg": "黃色陸行鳥刷怪蛋",
+  "item.chococraft.white_chocobo_spawn_egg": "白色陸行鳥 生怪蛋",
+  "item.chococraft.yellow_chocobo_spawn_egg": "黃色陸行鳥 生怪蛋",
   "itemGroup.chococraft": "陸行鳥 4"
 }
