--- a/chococraft/lang/zh_tw.json
+++ b/chococraft/lang/zh_tw.json
@@ -55,7 +55,7 @@
   "info.chococraft.book.gysahl_cake.entry.name": "基薩爾蛋糕",
   "info.chococraft.book.gysahl_cake.text1": "基薩爾蛋糕用於使$(l:chococraft:info/chicobo)陸行雛$()瞬間長成為$(l:chococraft:info/chocobo)陸行鳥$()。$(br)你必須先馴服$(l:chococraft:info/chicobo)陸行雛$()才能喂給它基薩爾蛋糕。基薩爾蛋糕不能像普通蛋糕那樣被放置。",
   "info.chococraft.book.gysahl_green.entry.name": "基薩爾野菜",
-  "info.chococraft.book.gysahl_green.text1": "基薩爾野菜會在主世界成片生長。這些野菜能用來繁殖$(l:chococraft:info/chocobo)陸行鳥$()和為它們恢覆血量。$(br)手動給$(l:chococraft:info/chocobo)陸行鳥$()喂食基薩爾野菜才有可能馴服它們。馴服後陸行鳥的頸部會出現一個項圈，就和被馴服的狼一樣。",
+  "info.chococraft.book.gysahl_green.text1": "基薩爾野菜會在主世界成片生長。這些野菜能用來繁殖$(l:chococraft:info/chocobo)陸行鳥$()和為它們恢復血量。$(br)手動給$(l:chococraft:info/chocobo)陸行鳥$()喂食基薩爾野菜才有可能馴服它們。馴服後陸行鳥的頸部會出現一個項圈，就和被馴服的狼一樣。",
   "info.chococraft.book.gysahl_green.text2": "一片自然生成於平原群系的基薩爾野菜。",
   "info.chococraft.book.gysahl_green.text3": "可通過種下基薩爾野菜種子來收獲基薩爾野菜。基薩爾野菜本身則能合成基薩爾野菜種子。",
   "info.chococraft.book.gysahl_green.text4": "這些種子能和其他作物一樣在耕地上方種植。作物成熟被收獲時有15%%的概率獲得$(l:chococraft:info/loverly_gysahl)漂亮的基薩爾野菜$()，也有5%%的概率獲得$(l:chococraft:info/gold_gysahl)金基薩爾野菜$()。",
@@ -79,7 +79,7 @@
   "info.chococraft.book.saddle.text1": "陸行鳥鞍使你能操控已馴服的$(l:chococraft:info/chocobo)陸行鳥$()。$(br)陸行鳥鞍分幾種不同種類，最基礎的只能讓你操控陸行鳥，而其他幾種則還會使$(l:chococraft:info/chocobo)陸行鳥$()擁有儲物能力。",
   "info.chococraft.book.saddle.text2": "$(bold)附袋陸行鳥鞍$()有18個槽位。$(br)$(bold)附包陸行鳥鞍$()則有45個槽位。",
   "info.chococraft.book.straw.entry.name": "草蓆",
-  "info.chococraft.book.straw.text1": "草蓆可放置在你的$(l:chococraft:info/chocobo)陸行鳥$()舍內，這樣$(l:chococraft:info/chocobo)陸行鳥$()在處於舍內時便會自然恢覆血量。",
+  "info.chococraft.book.straw.text1": "草蓆可放置在你的$(l:chococraft:info/chocobo)陸行鳥$()舍內，這樣$(l:chococraft:info/chocobo)陸行鳥$()在處於舍內時便會自然恢復血量。",
   "info.chococraft.book.subtitle": "有關陸行鳥的全面介紹",
   "info.chocopedia.book.name": "陸行鳥百科",
   "item.chococraft.black_chocobo_spawn_egg": "黑色陸行鳥 生怪蛋",
