--- a/cinderscapes/lang/zh_tw.json
+++ b/cinderscapes/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.cinderscapes.items": "余燼奇景",
+  "itemGroup.cinderscapes.items": "餘燼奇景",
   "block.cinderscapes.sulfur_ore": "硫磺礦石",
   "block.cinderscapes.sulfur_block": "硫磺塊",
   "item.cinderscapes.sulfur": "硫磺",
@@ -7,20 +7,20 @@
   "block.cinderscapes.bramble_berry_bush": "樹莓叢",
   "biome.cinderscapes.luminous_grove": "夜光樹林",
   "block.cinderscapes.luminous_pod": "發光豆莢",
-  "block.cinderscapes.twilight_tendrils": "暮光卷須",
+  "block.cinderscapes.twilight_tendrils": "暮光卷鬚",
   "block.cinderscapes.twilight_fescues": "暮光羊茅",
   "block.cinderscapes.twilight_vine_block": "暮光藤塊",
   "block.cinderscapes.photofern": "光蕨",
   "block.cinderscapes.tall_photofern": "高光蕨",
-  "block.cinderscapes.umbral_nylium": "暗影菌巖",
-  "block.cinderscapes.umbral_wart_block": "暗影疣塊",
+  "block.cinderscapes.umbral_nylium": "暗影菌岩",
+  "block.cinderscapes.umbral_wart_block": "暗影疙瘩塊",
   "block.cinderscapes.umbral_flesh_block": "暗影肉塊",
-  "block.cinderscapes.umbral_stem": "暗影菌柄",
-  "block.cinderscapes.stripped_umbral_stem": "去皮暗影菌柄",
+  "block.cinderscapes.umbral_stem": "暗影蕈柄",
+  "block.cinderscapes.stripped_umbral_stem": "剝皮暗影蕈柄",
   "block.cinderscapes.umbral_fungus": "暗影菌",
   "block.cinderscapes.umbral_sign": "暗影木告示牌",
-  "block.cinderscapes.umbral_hyphae": "暗影菌核",
-  "block.cinderscapes.stripped_umbral_hyphae": "去皮暗影菌核",
+  "block.cinderscapes.umbral_hyphae": "暗影蕈木",
+  "block.cinderscapes.stripped_umbral_hyphae": "剝皮暗影蕈木",
   "block.cinderscapes.umbral_button": "暗影木按鈕",
   "block.cinderscapes.umbral_pressure_plate": "暗影木壓力板",
   "block.cinderscapes.umbral_trapdoor": "暗影木地板門",
@@ -61,24 +61,24 @@
   "block.cinderscapes.rose_quartz_slab": "玫瑰石英半磚",
   "block.cinderscapes.rose_quartz_ore": "玫瑰石英礦石",
   "item.cinderscapes.rose_quartz": "玫瑰石英",
-  "block.cinderscapes.polypite_smoky_quartz": "聚合煙熏石英",
-  "block.cinderscapes.smoky_quartz_bricks": "煙熏石英磚",
-  "block.cinderscapes.smooth_smoky_quartz": "平滑煙熏石英",
-  "block.cinderscapes.crystalline_smoky_quartz": "結晶煙熏石英",
-  "block.cinderscapes.smooth_smoky_quartz_slab": "平滑煙熏石英半磚",
-  "block.cinderscapes.smoky_quartz_pillar": "煙熏石英柱",
-  "block.cinderscapes.smoky_quartz_block": "煙熏石英塊",
-  "block.cinderscapes.smooth_smoky_quartz_stairs": "平滑煙熏石英樓梯",
-  "block.cinderscapes.smoky_quartz_stairs": "煙熏石英樓梯",
-  "block.cinderscapes.chiseled_smoky_quartz_block": "鏨制煙熏石英塊",
-  "block.cinderscapes.smoky_quartz_slab": "煙熏石英半磚",
-  "block.cinderscapes.smoky_quartz_ore": "煙熏石英礦石",
-  "item.cinderscapes.smoky_quartz": "煙熏石英",
-  "biome.cinderscapes.blackstone_shales": "黑石頁巖",
+  "block.cinderscapes.polypite_smoky_quartz": "聚合煙燻石英",
+  "block.cinderscapes.smoky_quartz_bricks": "煙燻石英磚",
+  "block.cinderscapes.smooth_smoky_quartz": "平滑煙燻石英",
+  "block.cinderscapes.crystalline_smoky_quartz": "結晶煙燻石英",
+  "block.cinderscapes.smooth_smoky_quartz_slab": "平滑煙燻石英半磚",
+  "block.cinderscapes.smoky_quartz_pillar": "煙燻石英柱",
+  "block.cinderscapes.smoky_quartz_block": "煙燻石英塊",
+  "block.cinderscapes.smooth_smoky_quartz_stairs": "平滑煙燻石英樓梯",
+  "block.cinderscapes.smoky_quartz_stairs": "煙燻石英樓梯",
+  "block.cinderscapes.chiseled_smoky_quartz_block": "鏨制煙燻石英塊",
+  "block.cinderscapes.smoky_quartz_slab": "煙燻石英半磚",
+  "block.cinderscapes.smoky_quartz_ore": "煙燻石英礦石",
+  "item.cinderscapes.smoky_quartz": "煙燻石英",
+  "biome.cinderscapes.blackstone_shales": "黑石頁岩",
   "biome.cinderscapes.ashy_shoals": "灰燼淺灘",
   "block.cinderscapes.scorched_shrub": "焦灼灌木",
   "block.cinderscapes.scorched_sprouts": "焦灼苗",
-  "block.cinderscapes.scorched_tendrils": "焦灼卷須",
+  "block.cinderscapes.scorched_tendrils": "焦灼卷鬚",
   "block.cinderscapes.pyracinth": "火信子",
   "item.cinderscapes.ash_pile": "灰燼堆",
   "block.cinderscapes.ash": "灰燼",
@@ -87,24 +87,24 @@
   "block.cinderscapes.scorched_pressure_plate": "焦灼木壓力板",
   "block.cinderscapes.scorched_fence": "焦灼木柵欄",
   "block.cinderscapes.scorched_door": "焦灼木門",
-  "block.cinderscapes.stripped_scorched_hyphae": "去皮焦灼菌核",
+  "block.cinderscapes.stripped_scorched_hyphae": "剝皮焦灼蕈木",
   "block.cinderscapes.scorched_trapdoor": "焦灼木地板門",
   "block.cinderscapes.scorched_planks": "焦灼木板",
   "block.cinderscapes.scorched_stairs": "焦灼木樓梯",
   "block.cinderscapes.scorched_button": "焦灼木按鈕",
   "block.cinderscapes.scorched_stem": "焦灼菌柄",
   "block.cinderscapes.scorched_slab": "焦灼木半磚",
-  "block.cinderscapes.scorched_hyphae": "焦灼菌核",
+  "block.cinderscapes.scorched_hyphae": "焦灼蕈木",
   "block.cinderscapes.scorched_fence_gate": "焦灼木柵欄門",
-  "block.cinderscapes.stripped_scorched_stem": "去皮焦灼菌柄",
+  "block.cinderscapes.stripped_scorched_stem": "剝皮焦灼菌柄",
   "item.cinderscapes.music_disc_chilling_in_hell": "音樂唱片",
   "item.cinderscapes.music_disc_chilling_in_hell.desc": "Etorna_Z - Chilling In Hell",
   "item.cinderscapes.music_disc_luminous_plantation": "音樂唱片",
   "item.cinderscapes.music_disc_luminous_plantation.desc": "LudoCrypt - Luminous Plantation",
-  "text.autoconfig.cinderscapes.title": "余燼奇景配置",
+  "text.autoconfig.cinderscapes.title": "餘燼奇景配置",
   "text.autoconfig.cinderscapes.option.biomes": "修改生物群系生成",
   "text.autoconfig.cinderscapes.option.biomes.enableAshyShoals": "啟用灰燼淺灘生物群系",
-  "text.autoconfig.cinderscapes.option.biomes.enableBlackstoneShales": "啟用黑石頁巖生物群系",
+  "text.autoconfig.cinderscapes.option.biomes.enableBlackstoneShales": "啟用黑石頁岩生物群系",
   "text.autoconfig.cinderscapes.option.biomes.enableLuminousGrove": "啟用夜光樹林生物群系",
   "text.autoconfig.cinderscapes.option.biomes.enableQuartzCanyon": "啟用石英峽谷生物群系",
   "text.autoconfig.cinderscapes.option.enableAshFall": "啟用灰燼飄落效果"
