--- a/clientcommand/lang/zh_tw.json
+++ b/clientcommand/lang/zh_tw.json
@@ -29,8 +29,8 @@
   "commands.ccalc.parse.literal": "(字面量：%s)",
   "commands.ccalc.parse.negate": "(負值：%s)",
   "commands.ccalc.tooDeeplyNested": "表達式嵌套過深",
-  "commands.ccalcstack.success": "%d個%s是%d組余%d個",
-  "commands.ccalcstack.success.empty": "%d個物品是%d組余%d個",
+  "commands.ccalcstack.success": "%d個%s是%d組餘%d個",
+  "commands.ccalcstack.success.empty": "%d個物品是%d組餘%d個",
   "commands.ccalcstack.success.empty.exact": "%d個物品是正好%d組",
   "commands.ccalcstack.success.exact": "%d個%s是正好%d組",
   "commands.ccrackrng.failed": "破解玩家隨機種子失敗",
@@ -40,9 +40,9 @@
   "commands.ccrackrng.success": "成功破解玩家隨機種子：%d",
   "commands.cenchant.expectedWithWithoutExactly": "有效參數：“with”“without”“exactly”",
   "commands.cenchant.failed": "你請求的附魔無法獲得或者需要太長時間",
-  "commands.cenchant.incompatible": "互斥的魔咒",
+  "commands.cenchant.incompatible": "互斥的附魔",
   "commands.cenchant.needEnchantingPrediction": "本命令需要啟用附魔預測",
-  "commands.cenchant.success": "正在開始操控魔咒",
+  "commands.cenchant.success": "正在開始操控附魔",
   "commands.cenchant.uncracked": "你需要先破解隨機種子",
   "commands.cfind.found.left": "在",
   "commands.cfind.found.right": "找到%1$s，距離你%2$s格",
@@ -71,7 +71,7 @@
   "commands.cfish.error.openWater.help": "提示：紅色立方體顯示的方塊導致了不滿足開放水域條件",
   "commands.cfish.error.openWater.lilyPad": "提示：嘗試使浮標卡在睡蓮下",
   "commands.cfish.error.outOfWater": "浮標不在水中，自動控制無法工作",
-  "commands.cfish.help.tooManyEnchants": "提示：把多個魔咒放在一起獲得會很難且可能需要很長時間",
+  "commands.cfish.help.tooManyEnchants": "提示：把多個附魔放在一起獲得會很難且可能需要很長時間",
   "commands.cfish.listGoals.noGoals": "沒有釣魚目標",
   "commands.cfish.listGoals.success": "有%d個釣魚目標：",
   "commands.cfish.needFishingManipulation": "本命令需要啟用釣魚控制",
@@ -125,8 +125,8 @@
   "commands.cping.playerNotFound": "未找到玩家",
   "commands.cping.tooManyPlayers": "你的查詢最多可以匹配1名玩家",
   "commands.cpos.world.overworld": "主世界",
-  "commands.cpos.world.the_end": "末地",
-  "commands.cpos.world.the_nether": "下界",
+  "commands.cpos.world.the_end": "終界",
+  "commands.cpos.world.the_nether": "地獄",
   "commands.cpos.coords.left": "在%1$s中是",
   "commands.cpos.coords.right": "在%2$s中",
   "commands.crelog.failed": "未能重新登錄",
@@ -153,7 +153,7 @@
   "commands.ctitle.times": "改變了標題顯示時間",
   "commands.ctooltip.header.held": "所持物品的提示文本是：",
   "commands.ctooltip.header.stack": "這個物品的提示文本將是：",
-  "commands.ctp.notSpectator": "僅觀察者模式玩家可以使用傳送",
+  "commands.ctp.notSpectator": "僅旁觀模式玩家可以使用傳送",
   "commands.ctp.success": "成功將玩家傳送到%s",
   "commands.ctranslate.unknownError": "發生錯誤",
   "commands.ctranslate.unknownLanguageCode": "未知的語言代碼“%s”",
@@ -186,11 +186,11 @@
   "chorusManip.goalTooFar": "目標過遠！",
   "chorusManip.needChorusManipulation": "本命令需要啟用紫頌果操作",
   "chorusManip.setGoal": "將%s降落目標從%s改為%s",
-  "enchCrack.state": "魔咒破解狀態: %s",
+  "enchCrack.state": "附魔破解狀態: %s",
   "enchCrack.state.uncracked": "未破解",
   "enchCrack.state.cracking": "正在破解",
   "enchCrack.state.cracked": "已破解",
-  "enchCrack.enchantments": "魔咒：",
+  "enchCrack.enchantments": "附魔：",
   "enchCrack.clues": "提示：",
   "enchCrack.slot": "第%d行：",
   "enchCrack.xpSeed.one": "經驗值種子：%08X",
@@ -208,12 +208,12 @@
   "playerManip.state": "玩家種子破解狀態：%s",
   "playerManip.state.uncracked": "未破解",
   "playerManip.state.cracked": "已破解",
-  "playerManip.state.ench_cracking_1": "正在破解魔咒種子1",
+  "playerManip.state.ench_cracking_1": "正在破解附魔種子1",
   "playerManip.state.half_cracked": "半破解",
-  "playerManip.state.ench_cracking_2": "正在破解魔咒種子2",
+  "playerManip.state.ench_cracking_2": "正在破解附魔種子2",
   "playerManip.state.cracking": "正在破解",
   "playerManip.state.eating": "正在進食",
-  "playerManip.state.manipulating_enchantments": "正在操控魔咒",
+  "playerManip.state.manipulating_enchantments": "正在操控附魔",
   "playerManip.state.waiting_dummy_enchant": "等待附魔其他物品",
   "playerManip.reset": "重新開始操控玩家隨機數。原因：%s",
   "playerManip.reset.playerHurt": "受傷",
@@ -229,14 +229,14 @@
   "playerManip.reset.anvil": "使用了鐵砧",
   "playerManip.reset.food": "進食",
   "playerManip.reset.drink": "飲用",
-  "playerManip.reset.baneOfArthropods": "使用節肢殺手攻擊了節肢生物",
+  "playerManip.reset.baneOfArthropods": "使用節肢剋星攻擊了節肢生物",
   "playerManip.reset.advancement": "獲得了進度",
   "playerManip.reset.shield": "使用盾牌阻擋了攻擊",
   "playerManip.reset.give": "使用了give命令",
   "playerManip.reset.unbreaking": "使用了耐久物品",
   "playerManip.reset.itemBreak": "物品損壞",
   "playerManip.reset.frostWalker": "使用了冰霜行者",
-  "playerManip.reset.soulSpeed": "使用了靈魂疾行",
+  "playerManip.reset.soulSpeed": "使用了靈魂疾走",
   "playerManip.reset.entityCramming": "實體擁擠傷害",
   "playerManip.reset.enchanting": "附魔了物品",
   "playerManip.reset.recreated": "重新創建了玩家",
