--- a/cloaked/lang/zh_tw.json
+++ b/cloaked/lang/zh_tw.json
@@ -2,9 +2,9 @@
   "item.cloaked.cape": "披風",
   "cape.cloaked.pickaxe": "鎬",
   "cape.cloaked.creeper": "苦力怕",
-  "cape.cloaked.ender": "末影",
+  "cape.cloaked.ender": "終界",
   "cape.cloaked.star": "星星",
-  "cape.cloaked.prismarine": "海晶石",
+  "cape.cloaked.prismarine": "海磷石",
   "cape.cloaked.golem": "傀儡",
   "cape.cloaked.piston": "活塞",
   "cape.cloaked.turtle": "海龜",
