--- a/cnb/lang/zh_tw.json
+++ b/cnb/lang/zh_tw.json
@@ -17,11 +17,11 @@
   "item.cnb.flower_crown": "花冠",
   "item.cnb.glowing_flower_crown": "熒光花冠",
   "item.cnb.sporeling_backpack": "蘑孢靈背包",
-  "item.cnb.cinder_sword": "余燼劍",
-  "item.cnb.cinder_sword_1": "余燼劍",
-  "item.cnb.cinder_sword_2": "余燼劍",
-  "item.cnb.cinder_sword_3": "余燼劍",
-  "item.cnb.cinder_sword_4": "余燼劍",
+  "item.cnb.cinder_sword": "餘燼劍",
+  "item.cnb.cinder_sword_1": "餘燼劍",
+  "item.cnb.cinder_sword_2": "餘燼劍",
+  "item.cnb.cinder_sword_3": "餘燼劍",
+  "item.cnb.cinder_sword_4": "餘燼劍",
   "item.cnb.cactem_spear": "仙人酋矛",
   "item.cnb.pink_waterlily": "粉紅色睡蓮",
   "item.cnb.light_pink_waterlily": "淡粉色睡蓮",
@@ -33,23 +33,23 @@
   "block.cnb.yellow_waterlily_block": "黃色睡蓮",
   "block.cnb.potted_yellow_waterlily": "黃色睡蓮盆栽",
   "block.cnb.lizard_egg_block": "蜥蜴蛋",
-  "block.cnb.cinder_furnace": "余燼熔爐",
+  "block.cnb.cinder_furnace": "餘燼熔爐",
   "item.cnb.lizard_item_desert": "蜥蜴",
   "item.cnb.lizard_item_desert_2": "蜥蜴",
   "item.cnb.lizard_item_jungle": "蜥蜴",
   "item.cnb.lizard_item_jungle_2": "蜥蜴",
   "item.cnb.lizard_item_mushroom": "蜥蜴",
-  "item.cnb.sporeling_overworld_egg": "主世界蘑孢靈刷怪蛋",
-  "item.cnb.sporeling_nether_egg": "下界蘑孢靈刷怪蛋",
-  "item.cnb.little_grebe_spawn_egg": "小䴙䴘刷怪蛋",
-  "item.cnb.lizard_spawn_egg": "蜥蜴刷怪蛋",
-  "item.cnb.cindershell_spawn_egg": "燼殼龜刷怪蛋",
+  "item.cnb.sporeling_overworld_egg": "主世界蘑孢靈生怪蛋",
+  "item.cnb.sporeling_nether_egg": "地獄蘑孢靈生怪蛋",
+  "item.cnb.little_grebe_spawn_egg": "小䴙䴘生怪蛋",
+  "item.cnb.lizard_spawn_egg": "蜥蜴生怪蛋",
+  "item.cnb.cindershell_spawn_egg": "燼殼龜生怪蛋",
   "item.cnb.cindershell_bucket": "燼殼龜桶",
-  "item.cnb.lilytad_spawn_egg": "走路蓮刷怪蛋",
-  "item.cnb.yeti_spawn_egg": "雪人刷怪蛋",
-  "item.cnb.minipad_spawn_egg": "迷你蓮刷怪蛋",
-  "item.cnb.end_whale_spawn_egg": "末地鯨刷怪蛋",
-  "item.cnb.cactem_spawn_egg": "仙人酋刷怪蛋",
+  "item.cnb.lilytad_spawn_egg": "走路蓮生怪蛋",
+  "item.cnb.yeti_spawn_egg": "雪人生怪蛋",
+  "item.cnb.minipad_spawn_egg": "迷你蓮生怪蛋",
+  "item.cnb.end_whale_spawn_egg": "終界鯨生怪蛋",
+  "item.cnb.cactem_spawn_egg": "仙人酋生怪蛋",
   "entity.cnb.little_grebe": "小䴙䴘",
   "entity.cnb.little_grebe_chick": "小䴙䴘雛鳥",
   "entity.cnb.cindershell": "燼殼龜",
@@ -58,7 +58,7 @@
   "entity.cnb.yeti": "雪人",
   "entity.cnb.lilytad": "走路蓮",
   "entity.cnb.minipad": "迷你蓮",
-  "entity.cnb.end_whale": "末地鯨",
+  "entity.cnb.end_whale": "終界鯨",
   "entity.cnb.cactem": "仙人酋",
   "entity.little_grebe_chick.ambient": "小䴙䴘：啾啾",
   "entity.little_grebe.ambient": "小䴙䴘：啾啾",
@@ -86,12 +86,12 @@
   "entity.minipad.hurt": "迷你蓮：受傷",
   "entity.minipad.step": "迷你蓮：行走",
   "entity.minipad.swim": "迷你蓮：遊泳",
-  "entity.end_whale.ambient": "末地鯨：呼號",
+  "entity.end_whale.ambient": "終界鯨：呼號",
   "entity.cactem.ambient": "仙人酋：嘎吱",
   "entity.cactem.hurt": "仙人酋：受傷",
   "entity.cactem.heal": "仙人酋：施法",
   "item.heal_spell_book.player_heal": "施法",
   "item.cactem_spear.throw": "矛：飛出",
   "itemGroup.cnb_tab": "Creatures And Beasts",
-  "cnb.container.cinder_furnace": "余燼熔爐"
+  "cnb.container.cinder_furnace": "餘燼熔爐"
 }
