--- a/cobblegenrandomizer/lang/zh_tw.json
+++ b/cobblegenrandomizer/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "cobblegenrandomizer.jei.cobbleCategory": "圓石生成",
+  "cobblegenrandomizer.jei.cobbleCategory": "鵝卵石生成",
   "cobblegenrandomizer.jei.stoneCategory": "石頭生成",
   "cobblegenrandomizer.jei.basaltCategory": "玄武岩生成",
   "cobblegenrandomizer.jei.customCategory": "自定義生成",
